--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     url = "/"
 [[menu.main]]
     name = "CV"
-    url = "https://ed-orlando07.netlify.app/pdfs/CV_Orlando.pdf"
+    url = "https://ed-orlando-07-blog-site.netlify.app/pdfs/CV_Orlando.pdf"
 [[menu.main]]
     name = "GitHub"
     url = "https://github.com/edorlando07/blog_site"
